--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.4",
     "chat-app": "file:..",
     "lucide-react": "^0.487.0",
@@ -19,13 +20,13 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.0",
     "socket.io-client": "^4.8.1",
+    "vite": "^6.2.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.13",
     "eslint": "^9.21.0",
@@ -33,7 +34,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.2.0"
+    "tailwindcss": "^3.4.17"
   }
 }
