--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: chat-app
+    name: chat-app-backend
     env: node
     plan: free
-    buildCommand: npm run build
-    startCommand: npm start
+    buildCommand: cd backend && npm install
+    startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
@@ -18,3 +18,10 @@ services:
         value: "189523277583391"
       - key: CLOUDINARY_API_SECRET
         value: KywGbUAykxOphTDwooRCUgspX-0
+
+  - type: web
+    name: chat-app-frontend
+    env: static
+    plan: free
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: ./frontend/dist
