--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: chat-app-backend
+    name: chat-app
     env: node
     plan: free
-    buildCommand: cd backend && npm install
+    buildCommand: cd frontend && npm install && npm run build && cd ../backend && npm install
     startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
@@ -18,10 +18,3 @@ services:
         value: "189523277583391"
       - key: CLOUDINARY_API_SECRET
         value: KywGbUAykxOphTDwooRCUgspX-0
-
-  - type: web
-    name: chat-app-frontend
-    env: static
-    plan: free
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: ./frontend/dist
