--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: chat-app
     env: node
     plan: free
-    buildCommand: npm install --prefix frontend && npm run build --prefix frontend && npm install --prefix backend
-    startCommand: npm start --prefix backend
+    buildCommand: chmod +x build.sh && ./build.sh
+    startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
