--- a/render.yaml
+++ b/render.yaml
@@ -9,10 +9,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: MONGODB_URI
-        fromService:
-          type: pserv
-          name: mongodb
-          property: connectionString
+        sync: false
       - key: JWT_SECRET
         generateValue: true
       - key: CLOUDINARY_CLOUD_NAME
